WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162669
[GStreamer] Can't play any video with GSTREAMER_GL enabled
https://bugs.webkit.org/show_bug.cgi?id=162669
Summary
[GStreamer] Can't play any video with GSTREAMER_GL enabled
Mario Sanchez Prada
Reported
2016-09-28 04:18:04 PDT
In a recent build of WebKitGTK 2.14 for armv7hl with -DUSE_GSTREAMER_GL=ON, I can't play any video at all, neither using MiniBrowser or any other WebKit-based app (like our modified version of Yelp, which plays webM videos). The output dumped by MiniBrowser when running with GST_DEBUG=3 GST_DEBUG_NO_COLOR=1 is as follows: 0:00:00.557686608 29453 0xb8f75a20 WARN basesrc gstbasesrc.c:3489:gst_base_src_start_complete:<source> pad not activated yet 0:00:00.560178646 29453 0xb8f75a20 WARN basesrc gstbasesrc.c:3489:gst_base_src_start_complete:<source> pad not activated yet 0:00:00.637388838 29453 0xae627780 WARN qtdemux qtdemux_types.c:222:qtdemux_type_get: unknown QuickTime node type iods 0:00:00.637875846 29453 0xae627780 WARN qtdemux qtdemux.c:2651:qtdemux_parse_trex:<qtdemux0> failed to find fragment defaults for stream 1 0:00:00.638603857 29453 0xae627780 WARN qtdemux qtdemux.c:2651:qtdemux_parse_trex:<qtdemux0> failed to find fragment defaults for stream 2 0:00:00.639172866 29453 0xae627780 WARN basesrc gstbasesrc.c:2396:gst_base_src_update_length:<source> processing at or past EOS 0:00:00.724505183 29453 0xaf00cc00 FIXME videodecoder gstvideodecoder.c:1057:gst_video_decoder_drain_out:<avdec_h264-0> Sub-class should implement drain() 0:00:00.743410475 29453 0xaf00cc00 FIXME videodecoder gstvideodecoder.c:1057:gst_video_decoder_drain_out:<avdec_h264-0> Sub-class should implement drain() 0:00:01.165169985 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.166186000 29453 0xad952230 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl0> Failed to create context 0:00:01.166328002 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<glcolorconvertelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.166678008 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.170955074 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<glcolorconvertelement0> Subclass failed to decide allocation 0:00:01.172883104 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.173991121 29453 0xad94a8f0 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl1> Failed to create context 0:00:01.174338126 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<glcolorconvertelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.174726132 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<glcolorconvertelement0> Subclass failed to decide allocation 0:00:01.174831134 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.174998136 29453 0xb0202120 WARN GST_PADS gstpad.c:4081:gst_pad_peer_query:<gluploadelement0:src> could not send sticky events 0:00:01.175822149 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.176707163 29453 0xad952320 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl2> Failed to create context 0:00:01.177243171 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<gluploadelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.177642177 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<gluploadelement0> Subclass failed to decide allocation 0:00:01.177795179 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.183616269 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.185748302 29453 0xad8046c0 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl3> Failed to create context 0:00:01.186478314 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<glcolorconvertelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.186809319 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<glcolorconvertelement0> Subclass failed to decide allocation 0:00:01.186910320 29453 0xb0202120 WARN GST_PADS gstpad.c:4081:gst_pad_peer_query:<gluploadelement0:src> could not send sticky events 0:00:01.187162324 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.187637331 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.188510345 29453 0xad9521b0 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl4> Failed to create context 0:00:01.188700348 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<gluploadelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.188996352 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<gluploadelement0> Subclass failed to decide allocation 0:00:01.189086354 29453 0xb0202120 WARN GST_PADS gstpad.c:4081:gst_pad_peer_query:<sink:proxypad1> could not send sticky events 0:00:01.189094354 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.350633847 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.354764911 29453 0xad94a860 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl5> Failed to create context 0:00:01.355304919 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<glcolorconvertelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.355566923 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<glcolorconvertelement0> Subclass failed to decide allocation 0:00:01.355661925 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.356194933 29453 0xb0202120 WARN GST_PADS gstpad.c:4081:gst_pad_peer_query:<gluploadelement0:src> could not send sticky events 0:00:01.356944945 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.364994069 29453 0xad9522c0 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl6> Failed to create context 0:00:01.365847082 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<gluploadelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.367240104 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.368498123 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<gluploadelement0> Subclass failed to decide allocation 0:00:01.368992131 29453 0xb0202120 WARN GST_PADS gstpad.c:4081:gst_pad_peer_query:<sink:proxypad1> could not send sticky events 0:00:01.388301429 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.394701527 29453 0xad94a950 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl7> Failed to create context 0:00:01.395614542 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<glcolorconvertelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.396488555 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<glcolorconvertelement0> Subclass failed to decide allocation 0:00:01.396577556 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.397180566 29453 0xb0202120 WARN GST_PADS gstpad.c:4081:gst_pad_peer_query:<gluploadelement0:src> could not send sticky events 0:00:01.398266582 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.399893608 29453 0xad952150 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl8> Failed to create context 0:00:01.400729621 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<gluploadelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.401557633 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<gluploadelement0> Subclass failed to decide allocation 0:00:01.401646635 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.409099750 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.422741960 29453 0xad952180 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl9> Failed to create context 0:00:01.423179967 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<glcolorconvertelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.423685975 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.424215983 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<glcolorconvertelement0> Subclass failed to decide allocation 0:00:01.424453987 29453 0xb0202120 WARN GST_PADS gstpad.c:4081:gst_pad_peer_query:<gluploadelement0:src> could not send sticky events 0:00:01.425236999 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.427399032 29453 0xad9522f0 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl10> Failed to create context 0:00:01.427899040 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<gluploadelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.428306046 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.428616051 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<gluploadelement0> Subclass failed to decide allocation 0:00:01.433323124 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.444512296 29453 0xad952000 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl11> Failed to create context 0:00:01.445367310 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<glcolorconvertelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.445900318 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<glcolorconvertelement0> Subclass failed to decide allocation 0:00:01.446120321 29453 0xb0202120 WARN GST_PADS gstpad.c:4081:gst_pad_peer_query:<gluploadelement0:src> could not send sticky events 0:00:01.446995335 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.447862348 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.450015381 29453 0xad952030 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl12> Failed to create context 0:00:01.450757393 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<gluploadelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.451192399 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<gluploadelement0> Subclass failed to decide allocation 0:00:01.451711407 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.457470496 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.459535528 29453 0xad94a800 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl13> Failed to create context 0:00:01.459993535 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<glcolorconvertelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.460431542 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<glcolorconvertelement0> Subclass failed to decide allocation 0:00:01.460510543 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.460701546 29453 0xb0202120 WARN GST_PADS gstpad.c:4081:gst_pad_peer_query:<gluploadelement0:src> could not send sticky events 0:00:01.461317556 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.462409573 29453 0xad94a830 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl14> Failed to create context 0:00:01.462876580 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<gluploadelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.463082583 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<gluploadelement0> Subclass failed to decide allocation 0:00:01.463151584 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.467959658 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.469724685 29453 0xad94a8c0 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl15> Failed to create context 0:00:01.470407696 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<glcolorconvertelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.470706701 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<glcolorconvertelement0> Subclass failed to decide allocation 0:00:01.470785702 29453 0xb0202120 WARN GST_PADS gstpad.c:4081:gst_pad_peer_query:<gluploadelement0:src> could not send sticky events 0:00:01.470807702 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.471382711 29453 0xb0202120 WARN glwindow gstglwindow.c:308:gst_gl_window_new: Could not create window. user specified (null), creating dummy window 0:00:01.473137738 29453 0xb03098c0 WARN glcontext gstglcontext.c:1161:gst_gl_context_create_thread:<glcontextegl16> Failed to create context 0:00:01.473667746 29453 0xb0202120 WARN glbasefilter gstglbasefilter.c:445:gst_gl_base_filter_decide_allocation:<gluploadelement0> error: Failed to initialize egl: EGL_BAD_DISPLAY 0:00:01.474068753 29453 0xb0202120 WARN basetransform gstbasetransform.c:1042:gst_base_transform_do_bufferpool:<gluploadelement0> Subclass failed to decide allocation 0:00:01.474284756 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 3: Failed to initialize egl: EGL_BAD_DISPLAY (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) 0:00:01.479597838 29453 0xae627780 WARN qtdemux qtdemux.c:5520:gst_qtdemux_loop:<qtdemux0> error: streaming stopped, reason not-negotiated 0:00:01.479937843 29453 0xb8f75a20 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:908:handleMessage: Error 1: GStreamer encountered a general stream error. (url=file:///home/mario/samples/The%20Bourne%20Ultimatum%20-%20Trailer.mp4) Looks like it's having trouble to optain the platform display, but this seems to be specific to ARM since the same code compiled for x86_64 works just fine.
Attachments
Patch proposal
(2.73 KB, patch)
2016-09-30 09:13 PDT
,
Mario Sanchez Prada
no flags
Details
Formatted Diff
Diff
Patch proposal
(2.38 KB, patch)
2016-10-06 03:03 PDT
,
Mario Sanchez Prada
pnormand
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mario Sanchez Prada
Comment 1
2016-09-30 09:13:15 PDT
Created
attachment 290334
[details]
Patch proposal It seems this was my fault after all, since I passed a X11 display type to gst_gl_display_egl_new_with_egl_display() instead of an EGLDisplay[1], because I (naively) took the code from the Wayland codepath without realizing that PlatformDisplayWayland::native() returns a valid EGLDisplay, while PlatformDisplayX11::native() does not. Thus, simply passing the result of PlatformDisplay::eglDisplay() instead of PlatformDisplayX11::native() fixes the issue and I can now play video on my ARM device with GStreamerGL enabled \o/ Please review the attached patch, thanks! [1]
https://github.com/WebKit/webkit/blob/master/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp#L265
[2]
https://github.com/WebKit/webkit/blob/master/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp#L271
Jana Saout
Comment 2
2016-10-04 02:39:52 PDT
I tried to get GSTREAMER_GL running with the webkitgtk-2.14.0 release last weekend under wayland. Which was pretty successful, except for running into this bug which was resolved by doing the exact same replacement for the wayland case a few lines below. (native display is the wayland display, but it needs the egl display too)
Philippe Normand
Comment 3
2016-10-05 23:39:10 PDT
Mario, do you plan to update the patch?
Mario Sanchez Prada
Comment 4
2016-10-06 02:51:40 PDT
(In reply to
comment #2
)
> I tried to get GSTREAMER_GL running with the webkitgtk-2.14.0 release last > weekend under wayland. Which was pretty successful, except for running into > this bug which was resolved by doing the exact same replacement for the > wayland case a few lines below.
Interesting, I actually asked on IRC about how they wayland patch could actually work but got no answer and the, talking to someone else locally, I was told (and trusted it) that wayland display was actually an EGLDisplay, so I did forgot about that and assumed it would just work.(In reply to
comment #3
)
> Mario, do you plan to update the patch?
Yes, I'm doing it now
Mario Sanchez Prada
Comment 5
2016-10-06 03:03:03 PDT
Created
attachment 290804
[details]
Patch proposal Patch updated, please review. Thanks
Mario Sanchez Prada
Comment 6
2016-10-06 03:25:39 PDT
Committed
r206859
: <
http://trac.webkit.org/changeset/206859
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug