[GStreamer] Can't play any video with GSTREAMER_GL enabled https://bugs.webkit.org/show_bug.cgi?id=162669

Reviewed by Philippe Normand.

Make sure an EGLDisplay type is passed when creating the GstGlDisplay
for the EGL code path, instead of a native X11 display type, so
that we get a valid GstGlDisplay as a result, not a dummy one.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::MediaPlayerPrivateGStreamerBase::ensureGstGLContext):

Canonical link: https://commits.webkit.org/180912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206859 268f45cc-cd09-0410-ab3c-d52691b4dbfc